syntax = "proto3";
package greenbahar.vot.vot;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "vot/params.proto";
import "vot/next_vote.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/greenbahar/vot/x/vot/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/greenbahar/vot/vot/params";
  }
  // Queries a NextVote by index.
	rpc NextVote(QueryGetNextVoteRequest) returns (QueryGetNextVoteResponse) {
		option (google.api.http).get = "/greenbahar/vot/vot/next_vote";
	}
// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetNextVoteRequest {}

message QueryGetNextVoteResponse {
	NextVote NextVote = 1 [(gogoproto.nullable) = false];
}
// this line is used by starport scaffolding # 3
